--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -104,6 +104,83 @@ h6 {
   font-weight: normal;
 }
 
+.header {
+  max-width: 1200px;
+  margin: 0 auto;
+
+  &-wrapper {
+    background-image: url("images/467.png");
+    -webkit-background-size: 100% 100%;
+    background-size: 100%;
+    width: 100%;
+
+
+  }
+
+  .menu a {
+    color: white;
+    font-family: font8;
+    font-size: 18px;
+  }
+
+  .menu a:hover {
+    color: rgba(0, 117, 129, 0.6);
+    -webkit-transition-property: color;
+    -o-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-in;
+    -o-transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
+    background-color: transparent;
+  }
+
+  &__block {
+    max-width: 1200px;
+    margin: auto;
+  }
+
+  &__row {
+    display: flex;
+    justify-content: space-between;
+
+    margin-bottom: 2%;
+  }
+
+  &__item {
+    max-width: 24%;
+
+    &-img {
+      max-height: 300px;
+      max-width: 100%;
+    }
+
+    &_rioto {}
+
+    &_aeli {}
+
+    &_richard {}
+
+    &_tim {}
+
+    &_candy {}
+
+    &_vadim {}
+  }
+
+  .head {
+    padding: 10%;
+    padding-left: 0;
+    padding-right: 0;
+    margin: auto;
+    text-align: center;
+  }
+
+
+}
+
 .container {
   max-width: 100%;
 }
@@ -173,85 +250,6 @@ h6 {
   transition-timing-function: ease-in;
   text-shadow: 0 0 7px black;
   background: transparent;
-}
-
-header {
-  width: 100%;
-  background-image: url("images/467.png");
-  -webkit-background-size: 100% 100%;
-  background-size: 100%;
-  margin: 0;
-  margin-bottom: 1%;
-}
-
-header .menu a {
-  color: white;
-  font-family: font8;
-  font-size: 18px;
-}
-
-header .menu a:hover {
-  color: rgba(0, 117, 129, 0.6);
-  -webkit-transition-property: color;
-  -o-transition-property: color;
-  transition-property: color;
-  -webkit-transition-duration: 0.3s;
-  -o-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-in;
-  -o-transition-timing-function: ease-in;
-  transition-timing-function: ease-in;
-  background-color: transparent;
-}
-
-header .header_block {
-  max-width: 1200px;
-  margin: auto;
-}
-
-header .header_rioto {
-  width: 21%;
-  margin-left: 5%;
-  margin-top: 2%;
-}
-
-header .header_aeli {
-  width: 21%;
-  margin-left: 2%;
-  margin-top: 2%;
-}
-
-header .header_richard {
-  width: 21%;
-  margin-left: 2%;
-  margin-top: 2%;
-}
-
-header .header_tim {
-  width: 21%;
-  margin-left: 2%;
-  margin-top: 2%;
-}
-
-header .header_candy {
-  width: 23%;
-  margin-top: 2%;
-  margin-left: 5%;
-  margin-bottom: 2%;
-}
-
-header .head {
-  padding: 10%;
-  padding-left: 0;
-  padding-right: 0;
-  margin: auto;
-  text-align: center;
-}
-
-header .header_vadim {
-  width: 23%;
-  margin-top: 2%;
-  margin-bottom: 2%;
 }
 
 .header_description {
@@ -349,10 +347,6 @@ html {
   -webkit-transition-timing-function: ease-in;
   -o-transition-timing-function: ease-in;
   transition-timing-function: ease-in;
-}
-
-.row {
-  margin-bottom: 2%;
 }
 
 .navbar-brand {
