--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -40,11 +40,19 @@ a {
   }
 }
 
-p {
-  margin: 0;
+html {
+  min-height: 100%;
 }
 
 body {
+  min-height: 100%;
+  background-color: white;
+  background-image: url("images/pattern.png");
+  background-size: 50%;
+  margin: 0;
+}
+
+p {
   margin: 0;
 }
 
@@ -107,34 +115,48 @@ h6 {
 .header {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 0 1rem 2rem;
 
   &-wrapper {
-    background-image: url("images/467.png");
-    -webkit-background-size: 100% 100%;
-    background-size: 100%;
+    background-image: url("images/header-background.jpg");
     width: 100%;
-
-
   }
 
-  .menu a {
+  &__navbar {
+    display: flex;
+    width: 100%;
+  }
+
+  &__logo {
     color: white;
-    font-family: font8;
-    font-size: 18px;
+    padding: 0.25rem 0.5rem;
+    flex-grow: 1;
+
+    display: flex;
+    align-items: baseline;
+
+    &-title {
+      font-family: font1;
+      font-size: 75px;
+      line-height: 40px;
+    }
+
+    &-description {
+      font-family: font4;
+      font-size: 18px;
+      padding-bottom: 4px;
+      padding-left: 8px;
+    }
   }
 
-  .menu a:hover {
-    color: rgba(0, 117, 129, 0.6);
-    -webkit-transition-property: color;
-    -o-transition-property: color;
-    transition-property: color;
-    -webkit-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-timing-function: ease-in;
-    -o-transition-timing-function: ease-in;
-    transition-timing-function: ease-in;
-    background-color: transparent;
+  &__links {
+    display: flex;
+    align-items: center;
+    
+    &-item {
+      width: 40px;
+      padding-right: 12px;
+    }
   }
 
   &__block {
@@ -142,19 +164,44 @@ h6 {
     margin: auto;
   }
 
+  &__description {
+    font-family: font8;
+    font-size: 24px;
+    line-height: 24px;
+    color: white;
+    text-align: center;
+
+    @media(max-width: 500px) {
+      font-size: 16px;
+      line-height: 20px;
+    }
+  }
+
   &__row {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     margin-bottom: 2%;
   }
 
   &__item {
     max-width: 24%;
+    position: relative;
 
     &-img {
       max-height: 300px;
       max-width: 100%;
+      position: relative;
+      z-index: 2;
+    }
+
+    &-layer-img {
+      position: absolute;
+      top: 20%;
+      left: 10%;
+      width: 80%;
+      z-index: 1;
     }
 
     &_rioto {}
@@ -169,190 +216,75 @@ h6 {
 
     &_vadim {}
   }
+}
 
-  .head {
-    padding: 10%;
-    padding-left: 0;
-    padding-right: 0;
-    margin: auto;
-    text-align: center;
+.content {
+  max-width: 1200px;
+  margin: 1rem auto;
+
+  &__row {
+    margin-bottom: 1rem;
+    display: flex;
+    
+    &-image-slider {
+      flex-grow: 1;
+      width: 100%;
+      border-radius: 1rem;
+      margin-right: 1rem;
+      // overflow: hidden;
+    }
+
+    &-description {
+      flex-grow: 1;
+      font-family: font5;
+      background: rgba(0, 117, 129, 0.5);
+      color: white;
+      border: 2px dashed transparent;
+      border-radius: 1rem;
+      padding: 1rem 1.5rem;
+
+      transition: 0.3s;
+
+      &:hover {
+        border-color: rgba(0, 117, 129);;
+      }
+
+      &-title {
+        margin: 0.5rem 0 1rem;
+        font-size: 2rem;
+      }
+
+      &-text {
+        font-size: 1.5rem;
+      }
+    }
   }
 
+  &__additional {
+    font-family: font5;
+    background: rgba(167, 219, 216, 0.5);
+    color: rgba(0, 117, 129, 0.8);
+    padding: 1.5rem;
+    border: 2px dashed transparent;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
 
-}
+    transition: 0.3s;
+    
+    &:hover {
+      border-color: rgba(0, 117, 129);;
+    }
 
-.container {
-  max-width: 100%;
-}
+    &-title {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
 
-.carousel.fade {
-  opacity: 1;
-}
-
-.carousel.fade .item {
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  opacity: 0;
-  -webkit-transition: opacity .5s;
-  -o-transition: opacity .5s;
-  transition: opacity .5s;
-}
-
-.carousel.fade .item.active {
-  position: relative;
-  opacity: 1;
-}
-
-.item p {
-  position: absolute;
-  text-align: center;
-  left: 20%;
-  top: 10px;
-  color: white;
-  font-size: 18px;
-  font-family: fantasy;
-}
-
-.carousel-inner:hover~a.carousel-control {
-  background: transparent;
-  opacity: 1;
-  -webkit-transition-property: opacity;
-  -o-transition-property: opacity;
-  transition-property: opacity;
-  -webkit-transition-duration: 0.3s;
-  -o-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-in;
-  -o-transition-timing-function: ease-in;
-  transition-timing-function: ease-in;
-}
-
-.carousel-control,
-.carousel-control:focus {
-  font-size: 40px;
-  opacity: 0;
-  text-shadow: 0 0 7px black;
-}
-
-.carousel-control:hover {
-  opacity: 1;
-  -webkit-transition-property: opacity;
-  -o-transition-property: opacity;
-  transition-property: opacity;
-  -webkit-transition-duration: 0.3s;
-  -o-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-in;
-  -o-transition-timing-function: ease-in;
-  transition-timing-function: ease-in;
-  text-shadow: 0 0 7px black;
-  background: transparent;
-}
-
-.header_description {
-  font-family: font8;
-  color: white;
-  text-align: center;
-  font-size: 25px;
-}
-
-p.head {
-  font-size: 30px;
-  font-family: font8;
-}
-
-.navbar {
-  margin-bottom: 0;
-}
-
-body {
-  cursor: url("cursor.cur"), default;
-  min-height: 100%;
-  background-color: white;
-  background-image: url("images/pattern3.png");
-  -webkit-background-size: 50% 50%;
-  background-size: 50%;
-  margin: 0;
-}
-
-html {
-  min-height: 100%;
-}
-
-.main {
-  max-width: 1200px;
-  margin: auto;
-}
-
-.img {
-  width: 100%;
-}
-
-.block {
-  background: rgba(0, 117, 129, 0.5);
-  padding: 2%;
-  color: white;
-  font-size: 23px;
-  text-align: left;
-  font-family: font5;
-}
-
-.block:hover {
-  border: dashed;
-  -webkit-transition-property: border;
-  -o-transition-property: border;
-  transition-property: border;
-  -webkit-transition-duration: 0.1s;
-  -o-transition-duration: 0.1s;
-  transition-duration: 0.1s;
-  -webkit-transition-timing-function: ease-in;
-  -o-transition-timing-function: ease-in;
-  transition-timing-function: ease-in;
-}
-
-.notblock {
-  font-family: font5;
-  background: rgba(167, 219, 216, 0.5);
-  color: rgba(0, 117, 129, 0.8);
-  font-size: 23px;
-  margin-bottom: 17px;
-  margin-right: -15px;
-  padding: 15px;
-}
-
-.notblock:hover {
-  border: dashed;
-  -webkit-transition-property: border;
-  -o-transition-property: border;
-  transition-property: border;
-  -webkit-transition-duration: 0.1s;
-  -o-transition-duration: 0.1s;
-  transition-duration: 0.1s;
-  -webkit-transition-timing-function: ease-in;
-  -o-transition-timing-function: ease-in;
-  transition-timing-function: ease-in;
-}
-
-.carousel:hover {
-  border: dashed;
-  -webkit-transition-property: border;
-  -o-transition-property: border;
-  transition-property: border;
-  -webkit-transition-duration: 0.1s;
-  -o-transition-duration: 0.1s;
-  transition-duration: 0.1s;
-  -webkit-transition-timing-function: ease-in;
-  -o-transition-timing-function: ease-in;
-  transition-timing-function: ease-in;
-}
-
-.navbar-brand {
-  color: white;
-  font-size: 75px;
-  font-family: font1;
+    &-text {
+      font-size: 1.5rem;
+    }
+  }
 }
 
 footer {
@@ -360,64 +292,26 @@ footer {
   text-align: center;
 }
 
-.navbar-toggle {
-  padding: 0;
-  color: white;
-  font-size: 30px;
-  border: 0;
-}
-
 @media all and (max-width: 768px) {
-  menu {
-    background-image: url("vk.svg");
-  }
-
-  header.menu a {
-    padding-bottom: 20px;
-  }
-
-  .navbar-brand p {
-    font-family: font4;
-    color: white;
-    font-size: 15px;
-    display: inline-block !important;
-    vertical-align: text-bottom;
-  }
-
-  .header_description {
-    font-size: 20px;
-    margin: 0;
-    padding-left: 1%;
-    padding-right: 1%;
-  }
-
-  .block {
+  .content__block {
     margin-left: 15px;
     margin-right: 15px;
     font-size: 20px;
   }
 
-  .notblock {
+  .content__additional {
     margin-right: 0;
     font-size: 20px;
-  }
-
-  .nav li a {
-    padding-left: 0;
-  }
-
-  .navbar-nav a {
-    text-align: center;
   }
 }
 
 @media all and (max-width: 992px) {
-  .block {
+  .content__block {
     margin-left: 15px;
     margin-right: 15px;
   }
 
-  .notblock {
+  .content__additional {
     margin-right: 0;
   }
 }
